# mlv2

./: .dockerignore  .env.dev  .env.test  .gitignore  Dockerfile  README.md  cloudbuild-dev.yml  cloudbuild-prod.yml  data.txt  docker-compose-test.yml  docker-compose.yml  pyproject.toml  pythonpath.ps1
data/other/: hospital_zones_202411150541.csv  hospital_zones_hid_15_202411280013.csv  hospital_zones_hid_41_202411280018.csv  ml_tags.csv  ml_tags_incomplete.csv
data/supervised_survey/: HID_15_sup_small.json  HID_41_sup.json
data/unsupervised_survey/: CRH_PROD_unsupervised_1729116590_small.json  HID_41_unsup.json
docker/: docker-compose-dev.yml
docker/docker-entrypoint-initdb.d/: 01_init.sql  02_alter_fp_model.sql
prototype/: check_index.py  cloud_db.ipynb  db_cloud.ipynb  google_storage.ipynb  ml.ipynb
prototype/algorithms/: clustering.ipynb  ml.ipynb
prototype/connections/: db_local.ipynb  google_storage.ipynb
prototype/db/: read.py  write.py
prototype/db_and_storage/: bigquery.ipynb  db_cloud.py  db_gcp.ipynb  db_gcp.py  db_local.ipynb  db_local.py  getGcpSessionFactory.py  getLocalSessionFactory.py  getSessionFactory.py  storage_gcp.ipynb  test_download.pickle
prototype/hash/: gen.py
prototype/logging/: asizeof.py  log.py  pipeline.py
prototype/migration/: fp_model.sql
prototype/save_and_load/: cloud_load_files.py  cloud_save_files.py  db.py  gcp_load_files.py  gcp_save_files.py  load_files.py  local_load_files.py  local_save_files.py  save_files.py  test_path.py
save/S01_2024-10-20_07-11-09/: LE_43f74.pickle  W2V_231fe.pickle
save/S01_2024-10-25_08-47-00/: LE_b85f7.pickle  W2V_51e0e.pickle
save/S01_2024-10-25_12-41-43/: LE_2d168.pickle  W2V_3c2cb.pickle
save/S02_2024-10-20_07-16-17/: LE_0952f.pickle
save/S02_2024-10-25_08-52-01/: LE_df7fe.pickle
save/S02_2024-10-25_12-41-43/: LE_9498a.pickle
save/S03_2024-10-25_15-26-04/: FpVectSupervised_382bd.pickle
save/S03_2024-10-26_16-21-17/: FpVectSupervised_8e506.pickle
save/S04_2024-10-26_07-03-00/: FpVectUnsupervised_83d86.pickle
save/S04_2024-10-26_16-21-40/: FpVectUnsupervised_9634f.pickle
src/server/: main.py
surveys/: admin_json_hospital_id_15_small.json
tests/: S01_embed.py  T01_Test.py  T01_load_files.py  T02_test_stringify.py  T02_train.py  prototype.py  test_labelTagger.py  test_load_file.py  test_run.py  test_unit.py
tests_temp/: S04_vectorize_unsupervised.py  S05_augment.py  S06_prepare_training_data.py  S07_train.py
(+152 files in other folders)
