[project]
name = "mlv2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Nirand Pisutha-Arnond", email = "nnnpooh@gmail.com" },
]
dependencies = [
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "scikit-learn>=1.5.2",
    "openpyxl>=3.1.5",
    "gensim>=4.3.3",
    "Pympler>=1.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "jupyterlab>=4.2.5",
    "pytest>=8.3.3",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
