[project]
name = "mlv2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Nirand Pisutha-Arnond", email = "nnnpooh@gmail.com" }]
dependencies = [
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "scikit-learn>=1.5.2",
    "openpyxl>=3.1.5",
    "gensim>=4.3.3",
    "Pympler>=1.1",
    "imbalanced-learn>=0.12.4",
    "fastapi[standard]>=0.115.4",
    "google-cloud-storage>=2.18.2",
    "cloud-sql-python-connector[pg8000]>=1.13.0",
    "google-auth>=2.35.0",
    "python-dotenv>=1.0.1",
    "google-cloud-secret-manager>=2.21.0",
    "SQLAlchemy>=2.0.36",
    "google-cloud-bigquery>=3.27.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "jupyterlab>=4.2.5",
    "pytest>=8.3.3",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
dev = "fastapi dev src/server/main.py --reload"
